--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -196,7 +196,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
             <div class="col span-8 margin-bottom">
                 
                 <div class="content margin-end-xl">
-                    <?php echo $path ?>
+                    <?php echo $description ?>
                     <?php echo $markdown->text(file_get_contents($path)); ?>
                     
                     <div class="clear">
