--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -55,14 +55,14 @@ $cols = [
 
                 <ul class="margin-bottom">
                     <li><a href="/docs/client/account<?php echo $this->escape($clientSDK); ?>">Account</a></li>
-                    <li><a href="/docs/server/users<?php echo $this->escape($serverSDK);; ?>">Users</a></li>
-                    <li><a href="/docs/client/teams<?php echo $this->escape($clientSDK);; ?>">Teams</a></li>
-                    <li><a href="/docs/client/database<?php echo $this->escape($clientSDK);; ?>">Database</a></li>
-                    <li><a href="/docs/client/storage<?php echo $this->escape($clientSDK);; ?>">Storage</a></li>
-                    <li><a href="/docs/client/functions<?php echo $this->escape($serverSDK);; ?>">Functions</a></li>
-                    <li><a href="/docs/client/locale<?php echo $this->escape($clientSDK);; ?>">Localization</a></li>
-                    <li><a href="/docs/client/avatars<?php echo $this->escape($clientSDK);; ?>">Avatars</a></li>
-                    <li><a href="/docs/server/health<?php echo $this->escape($serverSDK);; ?>">Health</a></li>
+                    <li><a href="/docs/server/users<?php echo $this->escape($serverSDK); ?>">Users</a></li>
+                    <li><a href="/docs/client/teams<?php echo $this->escape($clientSDK); ?>">Teams</a></li>
+                    <li><a href="/docs/client/database<?php echo $this->escape($clientSDK); ?>">Database</a></li>
+                    <li><a href="/docs/client/storage<?php echo $this->escape($clientSDK); ?>">Storage</a></li>
+                    <li><a href="/docs/client/functions<?php echo $this->escape($serverSDK); ?>">Functions</a></li>
+                    <li><a href="/docs/client/locale<?php echo $this->escape($clientSDK); ?>">Localization</a></li>
+                    <li><a href="/docs/client/avatars<?php echo $this->escape($clientSDK); ?>">Avatars</a></li>
+                    <li><a href="/docs/server/health<?php echo $this->escape($serverSDK); ?>">Health</a></li>
                 </ul>
 
                 <div class="margin-bottom-small">
@@ -71,10 +71,10 @@ $cols = [
 
                 <ul class="margin-bottom">
                     <li><a href="/docs/realtime">Realtime</a></li>
+                    <li><a href="/docs/pagination">Pagination</a></li>
                     <li><a href="/docs/functions">Functions</a></li>
                     <li><a href="/docs/keys">API Keys</a></li>
                     <li><a href="/docs/webhooks">Webhooks</a></li>
-                    <li><a href="/docs/tasks">Tasks</a></li>
                 </ul>
 
                 <div class="margin-bottom-small">
@@ -82,6 +82,7 @@ $cols = [
                 </div>
 
                 <ul class="margin-bottom">
+                    <li><a href="/docs/advanced-database">Database</a></li>
                     <li><a href="/docs/custom-domains">Custom Domains</a></li>
                     <li><a href="/docs/permissions">Permissions</a></li>
                     <li><a href="/docs/error-codes">Error Codes</a></li>
