--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -206,6 +206,8 @@ sdk.database.listDocuments('movies', [
         </tr>
     </tbody>
 </table>
+<h3>Pagination</h3>
+<p>Appwrite has full support for pagination to better optmise and scale up your applications built on appwrite. Detailed documentation on pagination and how to implement it can be found <a href="/docs/pagination#offset-pagination" id="offset-pagination">here.</a></p>
 
 <h2><a href="/docs/advanced-database#known-limitations" id="known-limitations">Known Limitations</a></h2>
 <h3>Relationships</h3>
