Fixed View namespace

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -1,6 +1,6 @@
 <?php
 
-use Utopia\View;
+use Appwrite\Utopia\View;
 
 $events = $this->getParam('events', []);
 $runtimes = $this->getParam('runtimes', []);
